--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -29,6 +29,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "86969694",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('chat', 3), ('chien', 7), ('koala', 12)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "animal = pd.Series(\n",
+    "  ['chat', 'chien', 'koala']\n",
+    ")\n",
+    "poids = pd.Series(\n",
+    "    [3, 7, 12]\n",
+    ")\n",
+    "\n",
+    "list(zip(animal,poids))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "22651db6",
    "metadata": {},
